  ISABELLE_YAP    (formerly EXEC_YAP)

Note that automated detection from the file-system or search path has
been discontinued.  INCOMPATIBILITY.

* Name space: proper configuration options "long_names",
"short_names", "unique_names" instead of former unsynchronized
references.  Minor INCOMPATIBILITY, need to declare options in context
like this:

  declare [[unique_names = false]]


*** HOL ***

* Nitpick:
  - Added "need" and "total_consts" options.
  - Reintroduced "show_skolems" option by popular demand.
  - Renamed attribute: nitpick_def ~> nitpick_unfold.
    INCOMPATIBILITY.

* Sledgehammer:
  - sledgehammer available_provers ~> sledgehammer supported_provers
    INCOMPATIBILITY.
  - Added "monomorphize", "monomorphize_limit", and "type_sys" options.

* "try":
  - Added "simp:", "intro:", and "elim:" options.

* Quickcheck:
  - Added "eval" option to evaluate terms for the found counterexample
    (currently only supported by the default (exhaustive) tester)
  - Added post-processing of terms to obtain readable counterexamples
    (currently only supported by the default (exhaustive) tester)

* Function package: discontinued option "tailrec".
INCOMPATIBILITY. Use partial_function instead.

* HOL-Probability:
  - Caratheodory's extension lemma is now proved for ring_of_sets.
  - Infinite products of probability measures are now available.
  - Use extended reals instead of positive extended reals.
    INCOMPATIBILITY.


*** Document preparation ***

* New term style "isub" as ad-hoc conversion of variables x1, y23 into
subscripted form x\<^isub>1, y\<^isub>2\<^isub>3.

* Predefined LaTeX macros for Isabelle symbols \<bind> and \<then>
(e.g. see ~~/src/HOL/Library/Monad_Syntax.thy).


*** ML ***

* Structure Proof_Context follows standard naming scheme.  Old
ProofContext is still available for some time as legacy alias.

* Structure Timing provides various operations for timing; supersedes
former start_timing/end_timing etc.
